@@ -5,16 +5,18 @@ import e2e.helpers.CreateContactHelpers;
 import e2e.helpers.EditContactHelpers;
 import e2e.helpers.LoginHelpers;
 import e2e.helpers.RegisterHelpers;
+import io.github.bonigarcia.wdm.WebDriverManager;
 import org.openqa.selenium.OutputType;
 import org.openqa.selenium.TakesScreenshot;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.remote.DesiredCapabilities;
+import org.openqa.selenium.firefox.FirefoxDriver;
+import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URI;
+import java.net.URL;
 import java.util.concurrent.TimeUnit;
 
 public class ApplicationManager {
@@ -42,21 +44,24 @@ public class ApplicationManager {
     }
 
     public WebDriver remoteDriverSelenoid() throws MalformedURLException {
-        DesiredCapabilities capabilities = new DesiredCapabilities();
-        capabilities.setBrowserName("firefox");
-        capabilities.setVersion("90.0");
-        capabilities.setCapability("enableVNC", true);
-        capabilities.setCapability("enableLog", true);
-        driver = new RemoteWebDriver(
-                URI.create("http://127.0.0.1:4444/wd/hub").toURL(),
-                capabilities);
-        return driver;
+        FirefoxOptions options = new FirefoxOptions();
+        options.setCapability("browserName", "firefox");
+        options.setCapability("browserVersion", "90.0");
+        options.setCapability("enableVNC", true);
+        options.setCapability("enableLog", true);
+
+        return new RemoteWebDriver(new URL("http://127.0.0.1:4444/wd/hub"), options);
     }
 
-    protected void init() throws MalformedURLException {
-//        WebDriverManager.chromedriver().setup();
-//        driver = new ChromeDriver();
-        driver = remoteDriverSelenoid();
+    protected void init(boolean useRemoteDriver) throws MalformedURLException {
+        if (useRemoteDriver == true) {
+            driver = remoteDriverSelenoid();
+            System.out.println("Using remote driver (Selenoid)");
+        } else {
+            WebDriverManager.firefoxdriver().setup();
+            driver = new FirefoxDriver();
+            System.out.println("Using local FirefoxDriver");
+        }
 
         driver.get("http://phonebook.telran-edu.de:8080/");
         driver.manage().window().maximize();
@@ -67,6 +72,7 @@ public class ApplicationManager {
         createContact = new CreateContactHelpers(driver);
         editContact = new EditContactHelpers(driver);
     }
+
 
     public String takeScreenshot() throws IOException {
         File tmp = ((TakesScreenshot) driver).getScreenshotAs(OutputType.FILE);
